--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "author": "qxtang <qx.tang@foxmail.com>",
   "scripts": {
+    "prepublishOnly": "npm run compile",
     "dev": "rimraf bin && tsc -w",
-    "compiler": "rimraf bin && tsc"
+    "compile": "rimraf bin && tsc"
   },
+  "files": [
+    "readme.md",
+    "bin",
+    "package.json"
+  ],
   "bin": {
     "qx-cli": "bin/index.js"
   },
@@ -21,13 +27,20 @@
   },
   "homepage": "https://github.com/qxtang/qx-cli#readme",
   "dependencies": {
+    "chalk": "^4.1.1",
     "commander": "^9.2.0",
+    "download-git-repo": "^3.0.2",
+    "fs-extra": "^10.1.0",
     "inquirer": "^8.2.4",
-    "rimraf": "^3.0.2",
-    "tslib": "^2.4.0",
-    "typescript": "^4.6.4"
+    "ora": "^5.4.0",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.34"
+    "@types/node": "^17.0.34",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.6.4"
+  },
+  "engines": {
+    "node": ">=12"
   }
 }
